<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionerActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        app:layout_constraintBottom_toTopOf="@id/tv_choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/content_toolbar_navigation" />

        <TextView
            android:id="@+id/tv_question_number"
            style="@style/Medium16Sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:text="Pertanyaan 1" />

        <TextView
            android:id="@+id/tv_question_content"
            style="@style/Regular14Sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            tools:text="Apakah anda hanya menggunakannya untuk pekerjaan ringan seperti microsoft office?" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_choice"
        style="@style/Medium16Sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:text="@string/pilihan_jawaban"
        app:layout_constraintBottom_toTopOf="@id/ll_answers"
        app:layout_constraintEnd_toEndOf="@id/ll_answers"
        app:layout_constraintStart_toStartOf="@id/ll_answers" />


    <LinearLayout
        android:id="@+id/ll_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingBottom="24dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_no"
            style="@style/SemiBold16Sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="@color/green_accent"
            android:paddingVertical="16dp"
            android:text="@string/tidak"
            android:textAllCaps="false"
            android:textColor="@color/red_accent" />

        <Button
            android:id="@+id/btn_yes"
            style="@style/SemiBold16Sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="@color/red_accent"
            android:paddingVertical="16dp"
            android:text="@string/ya"
            android:textAllCaps="false"
            android:textColor="@color/light_primary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>